--- a/Searching.Domain/Searching.Domain.csproj
+++ b/Searching.Domain/Searching.Domain.csproj
@@ -8,10 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Base" />
-    <Folder Include="Entities" />
     <Folder Include="Interfaces" />
     <Folder Include="Shared" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
