--- a/Searching.Management.Api/appsettings.json
+++ b/Searching.Management.Api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Seq": {
+    "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "UseExporter": "Otlp",
+  "UseLogging": true,
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApiDb": "Host=localhost; Database=falcon; Username=postgres; Password=okayfine"
+  }
 }
