--- a/Searching.Management.Api/appsettings.json
+++ b/Searching.Management.Api/appsettings.json
@@ -17,5 +17,18 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "WebApiDb": "Host=localhost; Database=falcon; Username=postgres; Password=okayfine"
+  },
+  "jwt": {
+    "key": "Huey i don't like loosing, Huey you still a bitch",
+    "issuer": "https://localhost:7284/",
+    "audience": "https://localhost:7284/"
+  },
+  "SendGrid": {
+    "key": "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",
+    "senderEmail": "dev.no.reply.johnson@gmail.com"
+  },
+  "AppUrls": {
+    "clientActivateAccount":"https://localhost:7284/api/users/verify",
+    "client": "https://localhost:7284"
   }
 }
