--- a/Searching.Management.Api/Properties/launchSettings.json
+++ b/Searching.Management.Api/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "Searching.Management.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7284;http://localhost:5182",
+      "applicationUrl": "https://localhost:7284",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
