Add Migration script

--- a/Searching.Infrastructure/Searching.Infrastructure.csproj
+++ b/Searching.Infrastructure/Searching.Infrastructure.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Data\EntitesConfig" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
